fixed content shift w/min-height container

--- a/styles/App.scss
+++ b/styles/App.scss
@@ -89,7 +89,7 @@ $font-primary: 'Roboto', sans-serif;
 }
 
 .aboutImgs-container {
-  min-height: 100%;
+  min-height: 500px;
   width: 100%;
 }
 
